Support for Base 64 standard and safe dialects with optional padding.